emploee info markup and api get methods

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </div>
     <div id="landing-image"></div>
     <div id="landing-anchors">
-        <a href="#">ჩანაწერის დამატება</a>
-        <a href="#">ჩანაწერების სია</a>
+        <a class="btn" href="./employeeInfo.html">ჩანაწერის დამატება</a>
+        <a class="btn" href="#">ჩანაწერების სია</a>
     </div>
 </body>
 </html>
